--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
