--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.18.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
